2023/css/main.css
html {
  font-size: 62.5%;
}
/* = 10px
This technique is often used as a way to establish a consistent baseline font size for a web page. By using 10px as the base font size, it becomes easier to calculate font sizes in rem (root em) units. For example, if you want to set the font size of a specific element to 1.6rem, it will be equal to 16px (since 1rem is equal to the base font size).

By starting with a relative font size like 62.5%, you can maintain a flexible and consistent typography system that adjusts well to different devices and screen sizes while still allowing you to work with pixel-based measurements when needed.*/

body {
  margin: 0 auto;
  font-family: "Poppins";
}

.wrapper {
  max-width: 1200px;
  /* according to figma */
  margin: 0 50px;
  /* to center elements */
}

header {
  display: flex;
  justify-content: space-between;
  /* to have a gap between the logo and links */
  align-items: center;
}

nav {
  margin: 4em;
  /* = 40px */
}

nav ul {
  list-style-type: none;
  display: flex;
  gap: 4.1em;
  /* justify-content: space-between; - instead we use gab*/
  /* align-items: center; -not necessary */
  margin: 0;
}

nav ul li a {
  text-decoration: none;
  color: black;
  text-transform: uppercase;
  font-size: 1.6rem;
  position: relative;
  /* rem for text
em for margins */
  /* REM - relative to the root font size; hanging the root font size (e.g., on the html element) can quickly adjust all font sizes in your layout; users can easily adjust the root font size in their browser settings to increase or decrease text size without breaking the layout. */

  /* EM - based on the font size of the nearest parent element; allows for contextual sizing, where the size should be relative to the font size of a nearby element;adapt to changes in font size;
  !!! if we set a margin or padding to 1em, it will be equal to the font size of that parent element. */
}

/* adding underline to HOME as an active page */
nav ul li a.active:before {
  position: absolute;
  /* we need position RELATIVE in our parent "nav ul li a"*/
  content: "";
  width: 35%;
  /* according figma */
  height: 1px;
  border-bottom: 2px solid black;
  bottom: -5px;
}

nav ul li a:before {
  position: absolute;
  /* we need position RELATIVE in our parent "nav ul li a"*/
  content: "";
  width: 0%;
  /* according figma */
  height: 1px;
  border-bottom: 2px solid darkgrey;
  bottom: -5px;
  transition: width 0.3s;
}
nav ul li a:hover:before {
  width: 35%; /* Change the width to a visible value on hover */
}

/* HERO */
main {
  display: flex;
  gap: 8em;
  margin-top: 11em;
}

.left-col {
  width: 45%;
}
/* fixed width */

.right-col {
  flex-grow: 1;
  /*  to make the element expand and fill the available space within its parent container */
}

h1 {
  font-size: 5.2rem;
  /* according to figma; it's 52px, so, we changed standard 16px for the doc for it */
  font-family: "Playfair Display";
  font-weight: normal;
  margin: 0;
}

.subhead {
  font-size: 1.8rem;
}

.cta-btns {
  margin: 5em 0;
}
.cta-btns,
.secondary-cta {
  display: flex;
  gap: 2em;
}

.primary-cta {
  background-color: #f2f0df;
  font-size: 1.8rem;
  font-weight: bold;
  color: black;
  text-decoration: none;

  border-radius: 1.9em;
  /* according to figma */
  padding: 1em 2em;
}

.primary-cta:hover {
  background: #e3e0c7;
}

.secondary-cta {
  font-size: 1.8rem;
  text-decoration: none;
  color: black;
  display: block;
  padding: 1em 0;
}

.secondary-cta:hover {
  text-decoration: underline;
}

.secondary-cta svg {
  width: 20px;
  align-items: center;

  transition: transform 0.3s;
  /* a property for the transform while hovering */
}

.secondary-cta:hover svg {
  transform: translateX(10px);
}

.news {
  display: flex;
  gap: 3em;
  padding: 5em;
  border: 1px solid black;
  border-radius: 0.8em;
  position: relative;
  /* for confetti */
}

.news::before {
  position: absolute;
  content: "";
  background: url(../img/confetti.svg);
  width: 100px;
  height: 100px;
  top: -10px;
  left: -10px;
  z-index: 2;
}

p.employees {
  font-size: 3.3rem;
  margin: 0;
  font-weight: 200;
  line-height: 100%;
  /* to make 2 columns even - 50k and a start of the text on the same line */
}

p.details {
  font-size: 1.4rem;
  margin: 0;
}

.right-col {
  display: grid;
  gap: 2.3em;
  grid-template-columns: repeat(2, auto);
  /* = auto auto */
  grid-template-areas:
    "left ."
    "left .";
  /* "left right" "left bottom"; */
}

.card1 {
  grid-area: left;
  background: url(../img/clothing3.jpeg);
  /* code for the tag */
  position: relative;
}

.card1::before {
  position: absolute;
  content: "";
  background: url(../img/tag.svg) no-repeat;
  width: 100%;
  height: 100%;
  top: 20px;
  left: -30px;
  pointer-events: none;
  /* make nonclickable */
}
.card2 {
  background: url(../img/clothing1.jpeg);
}
.card3 {
  background-image: url(../img/clothing2.jpeg);
}

.card {
  border-radius: 0.8em;
  padding: 1.1em;
  display: flex;
  align-items: end;
  /* items at the bottom */
  background-size: 180%;

  transition: background-size 800ms;
}

.card:hover {
  background-size: 200%;
}

.card-details {
  background: white;
  border-radius: 0.6em;
  padding: 2em;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card-details a {
  color: black;
  text-decoration: none;
  font-size: 1.6rem;
  font-weight: bold;
}

.card-details p {
  font-size: 1.4rem;
  margin: 0;
}

p.product-price {
  font-size: 1.8rem;
}

